[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "asgiref>=3.8.1",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "celery>=5.4.0",
    "fastapi-mail>=1.4.2",
    "fastapi[all]>=0.115.6",
    "flower>=2.0.1",
    "greenlet>=3.1.1",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "rich>=13.9.4",
    "schemathesis>=3.39.7",
    "setuptools>=75.8.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]
